IPtablesbackup.txt
# Generated by iptables-save v1.8.7 on Thu Jun 27 15:08:04 2024
*filter
:INPUT DROP [54523180:6429151483]
:FORWARD DROP [1:60]
:OUTPUT ACCEPT [32098327:14766941088]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:ufw-after-forward - [0:0]
:ufw-after-input - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-output - [0:0]
:ufw-before-forward - [0:0]
:ufw-before-input - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-output - [0:0]
:ufw-logging-allow - [0:0]
:ufw-logging-deny - [0:0]
:ufw-not-local - [0:0]
:ufw-skip-to-policy-forward - [0:0]
:ufw-skip-to-policy-input - [0:0]
:ufw-skip-to-policy-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-user-input - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-output - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10050 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1167 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8501 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8888 -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o br-b218c229f769 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-b218c229f769 -j DOCKER
-A FORWARD -i br-b218c229f769 ! -o br-b218c229f769 -j ACCEPT
-A FORWARD -i br-b218c229f769 -o br-b218c229f769 -j ACCEPT
-A FORWARD -o br-1e44d2a32316 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-1e44d2a32316 -j DOCKER
-A FORWARD -i br-1e44d2a32316 ! -o br-1e44d2a32316 -j ACCEPT
-A FORWARD -i br-1e44d2a32316 -o br-1e44d2a32316 -j ACCEPT
-A FORWARD -o br-4901e473cb13 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-4901e473cb13 -j DOCKER
-A FORWARD -i br-4901e473cb13 ! -o br-4901e473cb13 -j ACCEPT
-A FORWARD -i br-4901e473cb13 -o br-4901e473cb13 -j ACCEPT
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER -d 192.168.240.4/32 ! -i br-4901e473cb13 -o br-4901e473cb13 -p tcp -m tcp --dport 5001 -j ACCEPT
-A DOCKER -d 192.168.240.5/32 ! -i br-4901e473cb13 -o br-4901e473cb13 -p tcp -m tcp --dport 5002 -j ACCEPT
-A DOCKER -d 192.168.240.7/32 ! -i br-4901e473cb13 -o br-4901e473cb13 -p tcp -m tcp --dport 5003 -j ACCEPT
-A DOCKER -d 192.168.240.2/32 ! -i br-4901e473cb13 -o br-4901e473cb13 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 192.168.240.3/32 ! -i br-4901e473cb13 -o br-4901e473cb13 -p tcp -m tcp --dport 5000 -j ACCEPT
-A DOCKER -d 192.168.240.2/32 ! -i br-4901e473cb13 -o br-4901e473cb13 -p tcp -m tcp --dport 443 -j ACCEPT
-A DOCKER -d 192.168.240.2/32 ! -i br-4901e473cb13 -o br-4901e473cb13 -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER -d 192.168.240.8/32 ! -i br-4901e473cb13 -o br-4901e473cb13 -p tcp -m tcp --dport 8888 -j ACCEPT
-A DOCKER -d 192.168.240.12/32 ! -i br-4901e473cb13 -o br-4901e473cb13 -p tcp -m tcp --dport 8502 -j ACCEPT
-A DOCKER -d 192.168.240.9/32 ! -i br-4901e473cb13 -o br-4901e473cb13 -p tcp -m tcp --dport 8000 -j ACCEPT
-A DOCKER -d 192.168.240.10/32 ! -i br-4901e473cb13 -o br-4901e473cb13 -p tcp -m tcp --dport 5173 -j ACCEPT
-A DOCKER -d 192.168.240.11/32 ! -i br-4901e473cb13 -o br-4901e473cb13 -p tcp -m tcp --dport 8501 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i br-b218c229f769 ! -o br-b218c229f769 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-1e44d2a32316 ! -o br-1e44d2a32316 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-4901e473cb13 ! -o br-4901e473cb13 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o br-b218c229f769 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-1e44d2a32316 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-4901e473cb13 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
-A ufw-after-input -p udp -m udp --dport 137 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 138 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp -m tcp --dport 139 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp -m tcp --dport 445 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 67 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 68 -j ufw-skip-to-policy-input
-A ufw-after-input -m addrtype --dst-type BROADCAST -j ufw-skip-to-policy-input
-A ufw-after-logging-forward -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-after-logging-input -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-before-forward -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ufw-before-forward -j ufw-user-forward
-A ufw-before-forward -j ufw-user-forward
-A ufw-before-input -i lo -j ACCEPT
-A ufw-before-input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-input -m conntrack --ctstate INVALID -j ufw-logging-deny
-A ufw-before-input -m conntrack --ctstate INVALID -j DROP
-A ufw-before-input -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ufw-before-input -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A ufw-before-input -j ufw-not-local
-A ufw-before-input -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j ACCEPT
-A ufw-before-input -d 239.255.255.250/32 -p udp -m udp --dport 1900 -j ACCEPT
-A ufw-before-input -j ufw-user-input
-A ufw-before-input -j ufw-user-input
-A ufw-before-output -o lo -j ACCEPT
-A ufw-before-output -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-output -j ufw-user-output
-A ufw-before-output -j ufw-user-output
-A ufw-logging-allow -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-logging-deny -m conntrack --ctstate INVALID -m limit --limit 3/min --limit-burst 10 -j RETURN
-A ufw-logging-deny -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-not-local -m addrtype --dst-type LOCAL -j RETURN
-A ufw-not-local -m addrtype --dst-type MULTICAST -j RETURN
-A ufw-not-local -m addrtype --dst-type BROADCAST -j RETURN
-A ufw-not-local -m limit --limit 3/min --limit-burst 10 -j ufw-logging-deny
-A ufw-not-local -j DROP
-A ufw-skip-to-policy-forward -j DROP
-A ufw-skip-to-policy-input -j DROP
-A ufw-skip-to-policy-output -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 22 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 22 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 80 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 80 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 443 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 443 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 10050 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 10050 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 1167 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 1167 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 8888 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 8888 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 8000 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 8000 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 3000 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 3000 -j ACCEPT
-A ufw-user-limit -m limit --limit 3/min -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT --reject-with icmp-port-unreachable
-A ufw-user-limit-accept -j ACCEPT
COMMIT
# Completed on Thu Jun 27 15:08:04 2024
# Generated by iptables-save v1.8.7 on Thu Jun 27 15:08:04 2024
*nat
:PREROUTING ACCEPT [741090439:175682210239]
:INPUT ACCEPT [743456:43525650]
:OUTPUT ACCEPT [1275305:66649139]
:POSTROUTING ACCEPT [1338253:70189325]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.26.0.0/16 ! -o br-b218c229f769 -j MASQUERADE
-A POSTROUTING -s 172.21.0.0/16 ! -o br-1e44d2a32316 -j MASQUERADE
-A POSTROUTING -s 192.168.240.0/20 ! -o br-4901e473cb13 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 192.168.240.4/32 -d 192.168.240.4/32 -p tcp -m tcp --dport 5001 -j MASQUERADE
-A POSTROUTING -s 192.168.240.5/32 -d 192.168.240.5/32 -p tcp -m tcp --dport 5002 -j MASQUERADE
-A POSTROUTING -s 192.168.240.7/32 -d 192.168.240.7/32 -p tcp -m tcp --dport 5003 -j MASQUERADE
-A POSTROUTING -s 192.168.240.2/32 -d 192.168.240.2/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 192.168.240.3/32 -d 192.168.240.3/32 -p tcp -m tcp --dport 5000 -j MASQUERADE
-A POSTROUTING -s 192.168.240.2/32 -d 192.168.240.2/32 -p tcp -m tcp --dport 443 -j MASQUERADE
-A POSTROUTING -s 192.168.240.2/32 -d 192.168.240.2/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A POSTROUTING -s 192.168.240.8/32 -d 192.168.240.8/32 -p tcp -m tcp --dport 8888 -j MASQUERADE
-A POSTROUTING -s 192.168.240.12/32 -d 192.168.240.12/32 -p tcp -m tcp --dport 8502 -j MASQUERADE
-A POSTROUTING -s 192.168.240.9/32 -d 192.168.240.9/32 -p tcp -m tcp --dport 8000 -j MASQUERADE
-A POSTROUTING -s 192.168.240.10/32 -d 192.168.240.10/32 -p tcp -m tcp --dport 5173 -j MASQUERADE
-A POSTROUTING -s 192.168.240.11/32 -d 192.168.240.11/32 -p tcp -m tcp --dport 8501 -j MASQUERADE
-A DOCKER -i br-b218c229f769 -j RETURN
-A DOCKER -i br-1e44d2a32316 -j RETURN
-A DOCKER -i br-4901e473cb13 -j RETURN
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i br-4901e473cb13 -p tcp -m tcp --dport 5001 -j DNAT --to-destination 192.168.240.4:5001
-A DOCKER ! -i br-4901e473cb13 -p tcp -m tcp --dport 5002 -j DNAT --to-destination 192.168.240.5:5002
-A DOCKER ! -i br-4901e473cb13 -p tcp -m tcp --dport 5003 -j DNAT --to-destination 192.168.240.7:5003
-A DOCKER ! -i br-4901e473cb13 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 192.168.240.2:8080
-A DOCKER ! -i br-4901e473cb13 -p tcp -m tcp --dport 5000 -j DNAT --to-destination 192.168.240.3:5000
-A DOCKER ! -i br-4901e473cb13 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.240.2:443
-A DOCKER ! -i br-4901e473cb13 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.240.2:80
-A DOCKER ! -i br-4901e473cb13 -p tcp -m tcp --dport 8888 -j DNAT --to-destination 192.168.240.8:8888
-A DOCKER ! -i br-4901e473cb13 -p tcp -m tcp --dport 8502 -j DNAT --to-destination 192.168.240.12:8502
-A DOCKER ! -i br-4901e473cb13 -p tcp -m tcp --dport 8000 -j DNAT --to-destination 192.168.240.9:8000
-A DOCKER ! -i br-4901e473cb13 -p tcp -m tcp --dport 5173 -j DNAT --to-destination 192.168.240.10:5173
-A DOCKER ! -i br-4901e473cb13 -p tcp -m tcp --dport 8501 -j DNAT --to-destination 192.168.240.11:8501
COMMIT
# Completed on Thu Jun 27 15:08:04 2024
